Fix hidden widget add button stretching to full row height

--- a/app/javascript/stylesheets/dashboards.scss
+++ b/app/javascript/stylesheets/dashboards.scss
@@ -80,12 +80,12 @@
     position: static;
     display: flex;
     align-items: center;
+    align-self: start;
     justify-content: space-between;
     padding: b.$spacer;
     background: var(--fpc-bright-background);
     opacity: 0.5;
     border-radius: b.$border-radius;
-    min-height: 60px;
   }
 
   &__label {
